# curry-ghc-language-plugin

./: all (Kopie).csv  all.csv  all.ods  old1-8.csv  old1-8.ods  stack.yaml  test.html
sandbox/: sandbox.cabal
sandbox/src/: Example.hs  Example3.hs  Example4.hs  Main.hs
src/Plugin/: CurryPlugin.hs
src/Plugin/CurryPlugin/: BuiltIn.hs  Encapsulation.hs  Monad.hs  THEval.hs
src/Plugin/Trans/: Expr.hs
